added message to nav

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://operatorTaczkiJednoosiowej.github.io/piwo",
+  "homepage": "https://anywayhereswonderwall.github.io/piwo",
   "name": "piwoapka",
   "version": "0.1.0",
   "private": true,
